project(redis)
add_executable(redis-server
    src/server.c
    src/server.h
    src/fmacros.h
    src/config.h
    src/solarisfixes.h
    src/rio.h
    src/sds.h
    src/connection.h
    src/atomicvar.h
    src/../deps/lua/src/lua.h
    src/../deps/lua/src/luaconf.h
    src/ae.h
    src/monotonic.h
    src/dict.h
    src/mt19937-64.h
    src/adlist.h
    src/zmalloc.h
    src/anet.h
    src/anet.c
    src/ziplist.h
    src/intset.h
    src/version.h
    src/util.h
    src/latency.h
    src/sparkline.h
    src/quicklist.h
    src/rax.h
    src/redismodule.h
    src/zipmap.h
    src/sha1.h
    src/endianconv.h
    src/crc64.h
    src/stream.h
    src/listpack.h
    src/rdb.h
    src/cluster.h
    src/slowlog.h
    src/bio.h
    src/asciilogo.h
    src/sentinel.c
    src/server.h
    src/fmacros.h
    src/config.h
    src/solarisfixes.h
    src/rio.h
)